# MEGN540_J-J

./: swap_and_pull.sh
HW/Discrete_Filter/: CMakeLists.txt  main.c
HW/Ring_Buffer/: CMakeLists.txt  Ring_Buffer.c  Ring_Buffer.h
Lab0-Blink/: Lab0-blink.c
Lab1-Serial/: Lab1.c  notesOnTroubleshooting
Lab2-Timing/: Lab2-Timers.c
c_lib/: Battery_Monitor.c  Encoder.c  Filter.c  MEGN540_MessageHandeling.c  MEGN540_MessageHandeling.h  Ring_Buffer.c  Ring_Buffer.h  SerialIO.c  SerialIO.h  Timing.c  Timing.h
